# some_shit

./: .coverage  .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/some_shit/: shitshit.py
src/some_shit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/some_shitt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_some_shit.py
