[metadata]
name = some_shitt
version = 0.0.1
author = Example Author
author_email = davida@nayax.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NayaxEmbeddedAutomation/some_shit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src