[metadata]
name = some_shit
version = 0.0.1
author = Example Author
author_email = davida@nayax.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NayaxEmbeddedAutomation/some_shit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = some_shit
python_requires = >=3.7
install_requires =
    requests>=2
zip_safe = no


[options.extras_require]
testing =
    flake8>=3.9
    tox>=3.24
    pytest>=6.2
    pytest-cov>=2.12
    mypy>=0.910

[options.package_data]
some_shit = py.typed

[flake8]
max-line-length = 160
